tests/codegen/fail/unsupported_closure_build.ql
fn main() -> Int {
    let capture = () => 1
    return 0
}
