tests/codegen/fail/unsupported_closure_build.stderr
error: tests/codegen/fail/unsupported_closure_build.ql:2:19: LLVM IR backend foundation does not support closure values yet
      let capture = () => 1
                    ^^^^^^^
